--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,6 +4,8 @@
 name: Java CI with Gradle
 
 on:
+  watch:
+    types: started
   push:
     branches: [ master ]
   pull_request:
@@ -13,6 +15,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
     - uses: actions/checkout@v2
